tests/baselines/reference/superWithTypeArgument2.errors.txt
==== tests/cases/compiler/superWithTypeArgument2.ts (3 errors) ====
    class C<T> {
        foo: T;
    }
    
    class D<T> extends C<T> {
        constructor(x) {
        ~~~~~~~~~~~
!!! error TS2105: Constructors for derived classes must contain a 'super' call.
            super<T>(x);
                 ~
!!! error TS1005: '.' expected.
            ~~~~~
!!! error TS2158: Untyped function calls may not accept type arguments.
        }
    }